# pyproc

./: .gitignore  LICENSE  README.md  pyproject.toml
pyproc/: __init__.py  process.py
